--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,3 +1,8 @@
 {
-    "hello": "Hello!"
+    "hola":"hello",
+    "La desconexión que necesitas en todos lados": "The disconnection you need everywhere",
+    "¡Quiero verlo!": "I want to see it!",
+    "Dulces de distintas partes del mundo":"Sweets from different parts of the world",
+    "Envios a toda España(Canarias incluida)":"Shipping to all of Spain (including the Canary Islands)",
+    "Típico pez de chocolate con leche, con un relleno repleto de burbujas que te hará flotar. ¡Ideal para tener un detalle con la persona que más quieres!":"Typical milk chocolate fish, with a filling full of bubbles that will make you float.Ideal for giving a gift to the person you love the most!"
 }
