--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,3 +1,7 @@
 {
-    "hola": "Hola!!"
+  "hello":"hola",
+  "The disconnection you need everywhere":"La desconexión que necesitas en todos lados",
+  "I want to see it!":"¡Quiero verlo!",
+  "Sweets from different parts of the world":"Dulces de distintas partes del mundo",
+  "Typical milk chocolate fish, with a filling full of bubbles that will make you float.Ideal for giving a gift to the person you love the most!":"Típico pez de chocolate con leche, con un relleno repleto de burbujas que te hará flotar. ¡Ideal para tener un detalle con la persona que más quieres!"
 }
